ES|QL|DS: skip redundant List.copyOf when deserializing FileSplit readSchema (N40)
The attrs ArrayList is local to the deserialization scope and never escapes
mutably; wrap with Collections.unmodifiableList rather than List.copyOf to
skip the size-N array allocation that List.copyOf would perform on
non-trivial schemas (count >= 3).